# GraphVisualizer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main-window.ui  main.cpp  ui_main-window.h
include/: Graph.h  GraphVisualizer.h
src/: Graph.cpp  GraphVisualizer.cpp
